# datasette-enrichments-re2

./: README.md  pyproject.toml
datasette_enrichments_re2/: __init__.py
datasette_enrichments_re2/templates/: enrichment-re2.html
tests/: test_enrichments_re2.py
